--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ services:
 before_install:
   docker build -t basu2110/docker-react -f Dockerfile.dev .
 scripts:
+  gem install rake
   docker run basu2110/docker-react nmp run test -- -- coverage
